# tree-sitter-yap

./: CMakeLists.txt  Cargo.toml  Makefile  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  tree-sitter.json
bindings/node/: yap-field-map.ts
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_yap/: __init__.py
bindings/rust/: lib.rs
queries/: highlights.scm
scripts/: extract-field-map.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: blocks.txt  functions.txt  letdecs.txt  literals.txt  modal_types.txt  operations.txt  pattern_matching.txt  precedence.txt  rows.txt  shift_reset.txt
